changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

types/transport/transport.c: Add missing braces to if clause in
    transport_type_process().
MSW 2009-01-24

Server part of client window resizing.  When server gets a mapsize request,
it now clears its map data so it does a complete refresh of the map to the
client.  This fixes drawing issues.
---
include/sockproto.h: Change map_newmap_cmd() definition
server/move.c, server/plugins.c, server/server.c, server/spell_effect.c:
    Change call to map_newmap_cmd()
socket/request.c: Add call to map_new_cmd() in setup area.  Change
    map_newmap_cmd() to take a socket structure instead of player -
    the setup only has socket pointer and not player pointer to use.
---
MSW 2009-01-24

test/unit/server/check_c_party.c: Fix failing regression test. (Access to
  uninitialized variable.)
Andreas Kirschbaum 2009-01-24

test/unit/common/check_object.c: Make the test_count_free test work in a build
  with MEMORY_DEBUG turned on as well.
Arvid Norlander 2009-01-24

common/image.c: Fix crash if read_bmap_names() is called more than once.
  Needed for debugging regression tests.
test/unit/common/check_object.c: Fix failing regression test. (Access to
  non-existent face.)
Andreas Kirschbaum 2009-01-24

common/readable.c, common/dialog.c, common/loader.l, common/treasure.c,
  common/image.c, socket/item.c: Add missing ending \n to LOG() calls.
Arvid Norlander 2009-01-24

socket/info.c: Fix stack smashing in magic_mapping_mark() on maps wider than 50
  tiles.
Arvid Norlander 2009-01-24

test/unit/common/check_item.c: Fix failing regression test.
Andreas Kirschbaum 2009-01-24
